--- a/opentip.css
+++ b/opentip.css
@@ -7,6 +7,12 @@
 	max-width: 300px;
 	z-index: 100;
 }
+  .opentipContainer.opentip-fixed {
+    -webkit-transition-property: left, top;
+    -webkit-transition-duration: 0.2s, 0.2s;
+    -moz-transition-property: left, top;
+    -moz-transition-duration: 0.2s, 0.2s;
+  }
 .opentip {
 	position: relative;
 	font-size: 13px;
@@ -27,8 +33,8 @@
 	height: 15px;
 }
 .opentip .loadingIndication span { display: none; }
-.loading .opentip .loadingIndication { display: block; }
-.loading .opentip .content { display: none; }
+.opentip-loading .opentip .loadingIndication { display: block; }
+.opentip-loading .opentip .content { display: none; }
 
 .opentipButtons {
 	position: absolute;
