Added the CSS3 animations for opera

--- a/opentip.css
+++ b/opentip.css
@@ -1,6 +1,14 @@
 /**
  ** http://www.opentip.org
  ** See opentip.js for the license.
+ **
+ ** One word about the different states when showing / hiding opentips.
+ **
+ ** An opentip starts with the .ot-completely-hidden class.
+ ** When shown, it changes to .ot-becoming-visible, then to .ot-visible (depending
+ ** on the length of the transition effect).
+ ** When hidden, it changes to .ot-hidden, and then to .ot-completely-hidden (again:
+ ** depending on the length of the transition effect).
  **/
 .ot-container {
 	position: absolute;
@@ -281,23 +289,18 @@ as the .ot-completely-hidden property (in combination with your
 To define a hide effect, you do the same, but for .ot-hidden (in combination
 with your .ot-show-effectName).
 
-
 **/
+
 
 .ot-container.ot-css3 {
   -webkit-transition-duration: 1s; /* Well be reset by JS */
   -webkit-transition-property: opacity, -webkit-transform;
   -moz-transition-duration: 1s; /* Well be reset by JS */
   -moz-transition-property: opacity, -moz-transform;
+  -o-transition-duration: 1s; /* Well be reset by JS */
+  -o-transition-property: opacity, -o-transform;
 
   opacity: 1;
-}
-
-.ot-container.ot-css3.ot-fixed {
-  -webkit-transition-property: opacity, -webkit-transform, left, top;
-  -webkit-transition-duration: 1s, 1s, 0.2s, 0.2s;
-  -moz-transition-property: opacity, -moz-transform, left, top;
-  -moz-transition-duration: 1s, 1s, 0.2s, 0.2s;
 }
 
 .ot-container.ot-css3.ot-completely-hidden {
@@ -321,6 +324,7 @@ with your .ot-show-effectName).
 .ot-container.ot-css3.ot-hidden.ot-hide-shrink {
   -webkit-transform: scale(0);
   -moz-transform: scale(0);
+  -o-transform: scale(0);
 }
 
 
@@ -331,6 +335,7 @@ with your .ot-show-effectName).
 .ot-container.ot-css3.ot-hidden.ot-hide-blindUp {
   -webkit-transform: scaleY(0);
   -moz-transform: scaleY(0);
+  -o-transform: scaleY(0);
   opacity: 0;
 }
 
@@ -340,6 +345,7 @@ with your .ot-show-effectName).
 .ot-container.ot-css3.ot-hidden.ot-hide-puff {
   -webkit-transform: scale(5);
   -moz-transform: scale(5);
+  -o-transform: scale(5);
   opacity: 0;
 }
 
@@ -347,11 +353,13 @@ with your .ot-show-effectName).
 .ot-container.ot-css3.ot-becoming-visible.ot-show-rotate {
   -webkit-transform: scale(3) rotate(-500deg);
   -moz-transform: scale(3) rotate(-500deg);
+  -o-transform: scale(3) rotate(-500deg);
   opacity: 0;
 }
 .ot-container.ot-css3.ot-hidden.ot-hide-rotate {
   -webkit-transform: scale(3) rotate(500deg);
   -moz-transform: scale(3) rotate(500deg);
+  -o-transform: scale(3) rotate(500deg);
   opacity: 0;
 }
 
