--- a/opentip.css
+++ b/opentip.css
@@ -77,6 +77,7 @@
 	position: absolute;
 	overflow: hidden;
     color: #cccccc; /* JS will read this property to draw the stem in the right color. */
+/*    background: rgba(255, 0, 0, 0.5);*/
 }
 
 
