--- a/opentip.css
+++ b/opentip.css
@@ -90,7 +90,14 @@
 
 
 
-/**  Styles  **/
+/**
+
+Styles
+======
+
+Those are the different styles available in opentip.
+
+**/
 
 .style-standard .opentip {
 	border: 1px solid #f2e37b;
@@ -228,7 +235,13 @@
 }
 
 
-/** IE 6 HACKS **/
+/**
+
+IE 6 HACKS
+==========
+
+**/
+
 /*\*/
 .ot-buttons {
 	z-index: 110;
@@ -250,16 +263,6 @@
  	filter:mask();/*must have*/
 }
 
-/*
-.ot-container .stem div {
-	behavior: expression((this.runtimeStyle.behavior="none")&&(this.pngSet?this.pngSet=true:(this.nodeName == "IMG" && this.src.toLowerCase().indexOf('.png')>-1?(this.runtimeStyle.backgroundImage = "none",
-		this.runtimeStyle.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='" + this.src + "', sizingMethod='image')",
-		this.src = "transparent.gif"):(this.origBg = this.origBg? this.origBg :this.currentStyle.backgroundImage.toString().replace('url("','').replace('")',''),
-		this.runtimeStyle.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='" + this.origBg + "', sizingMethod='crop')",
-		this.runtimeStyle.backgroundImage = "none")),this.pngSet=true)
-	);
-}
-*/
 .style-glass .opentip {
 	border: 1px solid #bbbbbb;
 }
@@ -364,39 +367,93 @@ with your .ot-show-effectName).
 
 
 
-/*
-
-.ot-container.ot-css3.ot-hidden.ot-show-condense { -webkit-transform: scale(5); }
-*/
 
 
 
-/*
-.ot-container.ot-css3.ot-hidden.ot-hide-fade { }
 
 
-@-webkit-keyframes shrink {
-	0% { opacity: 1; -webkit-transform: scale(1); }
-    90% { opacity: 0; -webkit-transform: scale(0.1); }
-	100% { opacity: 0; -webkit-transform: scale(0); }
-}
-.ot-container.ot-css3.ot-hidden.ot-hide-shrink { -webkit-animation-name: shrink; }
-
-@-webkit-keyframes blindUp {
-	0% { opacity: 1; -webkit-transform: scaleY(1); }
-    90% { opacity: 0; -webkit-transform: scaleY(0.1); }
-	100% { opacity: 0; -webkit-transform: scaleY(0); }
-}
-.ot-container.ot-css3.ot-hidden.ot-hide-blindUp { -webkit-animation-name: blindUp; }
-.ot-container.ot-css3.ot-hidden.ot-hide-slideUp { -webkit-animation-name: blindUp; }
 
 
-@-webkit-keyframes puff {
-	0% { opacity: 1; -webkit-transform: scale(1); }
-	100% { opacity: 0; -webkit-transform: scale(5); }
-}
-.ot-container.ot-css3.ot-hidden.ot-hide-puff { -webkit-animation-name: puff; }
 
+
+/**
+
+Content design
+==============
+
+Nicer input fields, etc...
 
 */
 
+
+.opentip label {
+	margin-bottom: 3px;
+	margin-top: 10px;
+	display: block;
+}
+.opentip input, .opentip textarea {
+	padding: 5px 6px;
+	border: 1px solid rgba(100, 100, 100, 0.2);
+	background: rgba(255,255,255,0.5);
+	display: block;
+	width: 100%;
+	margin: 3px 0 10px 0;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+.opentip input:focus, .opentip textarea:focus {
+	border-color: rgba(100, 100, 100, 0.2);
+	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.opentip button {
+	margin-top: 20px;
+	display: block;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 100%;
+
+
+	border: 1px solid rgba(247, 186, 0, 0.8);
+	background: rgba(247, 186, 0, 0.9);
+	font-size: 14px;
+	line-height: 14px;
+	padding: 10px 10px;
+	position: relative;
+	color: rgba(255,255,255, 1);
+	text-shadow: 0 0 10px rgba(255,255,255,0.3);
+	text-align: center;
+	font-weight: bold;
+	font-family: serif;
+	font-style: italic;
+	text-decoration: none;
+	margin: 20px 0 0 0;
+	cursor: pointer;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	-moz-box-shadow: 0 0 4px rgba(0,0,0,0.2),
+	                 0 -2px 10px rgba(255, 255, 255, 0.4) inset;
+	-webkit-box-shadow: 0 0 4px rgba(0,0,0,0.2),
+	                 0 -2px 10px rgba(255, 255, 255, 0.4) inset;
+}
+.opentip button {
+	padding: 8px 6px;
+}
+.button:hover, button:hover {
+	-moz-box-shadow: 0 0 6px rgba(247, 192, 25, 1),
+	                 0 -2px 10px rgba(255, 255, 255, 0.6) inset;
+	text-shadow: 0 0 4px rgba(255,255,255,1);
+}
+
+
+
+/** IE 6 HACKS **/
+/*\*/
+.opentip input, .opentip textarea, .opentip button {
+	width: 200px;
+}
+/**/
