--- a/opentip.css
+++ b/opentip.css
@@ -26,7 +26,7 @@
     -moz-transition-duration: 0.2s, 0.2s;
   }
   .ot-container.ot-completely-hidden {
-/*    display: none;*/
+    display: none;
   }
 .opentip {
 	position: relative;
