Added a minified version of all js.

--- a/_layouts/old.html
+++ b/_layouts/old.html
@@ -20,11 +20,7 @@
       @import "css/general.css";
     </style>
 
-    <script type="text/javascript" src="{{ url }}/js/prototype-1.7.js"></script>
-    <script type="text/javascript" src="{{ url }}/js/scriptaculous-1.9/scriptaculous.js?load=builder,effects"></script>
-
-    <script type="text/javascript" src="{{ url }}/js/opentip.js"></script>
-    <script type="text/javascript" src="{{ url }}/js/excanvas.js"></script>
+    <script type="text/javascript" src="{{ url }}/js/min.js"></script>
 
     <script type="text/javascript">
       Opentip.styles.codeSample = {
