Added the opentip css.

--- a/_layouts/old.html
+++ b/_layouts/old.html
@@ -16,7 +16,7 @@
     <meta property="og:site_name" content="www.opentip.org"/>
     -->
     <style type="text/css">
-      @import "http://src.opentip.org/master/opentip.css?v=2";
+      @import "css/opentip.css";
       @import "css/general.css";
     </style>
 
