The links are relative now.

--- a/_layouts/old.html
+++ b/_layouts/old.html
@@ -20,7 +20,7 @@
       @import "css/general.css";
     </style>
 
-    <script type="text/javascript" src="{{ url }}/js/min.js"></script>
+    <script type="text/javascript" src="js/min.js"></script>
 
     <script type="text/javascript">
       Opentip.styles.codeSample = {
