The logo actually links to the home site now.

--- a/_layouts/old.html
+++ b/_layouts/old.html
@@ -59,7 +59,7 @@
 
   <div id="container">
     <div id="header">
-      <a href="{{ url }}" class="logo"><span>Opentip</span></a>
+      <a href="./" class="logo"><span>Opentip</span></a>
     </div>
     <div id="main">
       {{ content }}
