--- a/css/stylus/opentip.styl
+++ b/css/stylus/opentip.styl
@@ -25,3 +25,20 @@
       color #f8f8f8
       color rgba(255, 255, 255, 0.9)
       text-shadow 1px 1px 0px rgba(0, 0, 0, 0.2)
+
+  &.hide-effect-fade
+    transition opacity 1s ease-in-out
+    opacity 1
+    &.hiding
+      opacity 0
+
+  &.show-effect-appear
+    &.going-to-show
+    &.showing
+      transition opacity 1s ease-in-out
+    &.going-to-show
+      opacity 0
+    &.showing
+      opacity 1
+    &.visible
+      opacity 1
