Close buttons are drawn in canvas now.

--- a/css/opentip.css
+++ b/css/opentip.css
@@ -25,6 +25,19 @@
   color: rgba(0,0,0,0.7);
   text-shadow: -1px -1px 0px rgba(255,255,255,0.2);
 }
+.opentip-container .opentip .buttons {
+  position: absolute;
+}
+.opentip-container .opentip .buttons .close {
+  position: absolute;
+  top: -12px;
+  left: 60px;
+  color: rgba(0,0,0,0.5);
+  text-decoration: none;
+}
+.opentip-container .opentip .buttons .close span {
+  display: none;
+}
 .opentip-container.style-dark .opentip {
   color: #f8f8f8;
   color: rgba(255,255,255,0.9);
