--- a/css/opentip.css
+++ b/css/opentip.css
@@ -25,17 +25,14 @@
   color: rgba(0,0,0,0.7);
   text-shadow: -1px -1px 0px rgba(255,255,255,0.2);
 }
-.opentip-container .opentip .buttons {
-  position: absolute;
-}
-.opentip-container .opentip .buttons .close {
+.opentip-container .opentip .close {
   position: absolute;
   top: -12px;
   left: 60px;
   color: rgba(0,0,0,0.5);
   text-decoration: none;
 }
-.opentip-container .opentip .buttons .close span {
+.opentip-container .opentip .close span {
   display: none;
 }
 .opentip-container.style-dark .opentip {
