AJAX works now.

--- a/css/stylus/opentip.styl
+++ b/css/stylus/opentip.styl
@@ -28,6 +28,14 @@
       text-decoration: none;
       span
         display none
+
+    .loading-indicator
+      display none
+
+  &.loading
+    .loading-indicator
+      display block
+
   &.style-dark
     .opentip
       color #f8f8f8
