--- a/test/views/playground.jade
+++ b/test/views/playground.jade
@@ -3,18 +3,20 @@ head
   meta(charset="utf-8")
 
 
+  title Opentip | Playground
+
   != css("stylus/opentip")
 
 
 
-  != js('lib/ender')
-  != js('src/opentip')
-  != js('src/adapter.ender')
-
-
-  //- != js('lib/jquery-1.8.0')
+  //- != js('lib/ender')
   //- != js('src/opentip')
-  //- != js('src/adapter.jquery')
+  //- != js('src/adapter.ender')
+
+
+  != js('lib/jquery-1.8.0')
+  != js('src/opentip')
+  != js('src/adapter.jquery')
 
   //- != js('src/opentip')
   //- != js('src/adapter.native')
@@ -63,8 +65,7 @@ head
       font: 20px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
       padding: 60px 50px;
 
-    .opentip-test
-    .opentip-test2
+    .test
       width 150px
       background #f4f4f4
       padding 10px
@@ -87,5 +88,9 @@ head
 body
 
   #main
-    .opentip-test(data-ot="test") Hello
-    .opentip-test2(data-ot="test", data-ot-hide-trigger="closeButton", data-ot-target="true", data-ot-tip-joint="top") Hello
+
+    .test.opentip-test(data-ot="test") Hello
+    .test.opentip-test2(data-ot="test", data-ot-hide-trigger="closeButton", data-ot-target="true", data-ot-tip-joint="top") Hello
+
+    .test
+      a(href="/ajax-test-delayed",data-ot="", data-ot-ajax="yes", data-ot-show-on="click", data-ot-target="yes", data-ot-hide-trigger="closeButton") AJAX
