Further improved AJAX and added a few tests.

--- a/test/views/playground.jade
+++ b/test/views/playground.jade
@@ -93,4 +93,4 @@ body
     .test.opentip-test2(data-ot="test", data-ot-hide-trigger="closeButton", data-ot-target="true", data-ot-tip-joint="top") Hello
 
     .test
-      a(href="/ajax-test-delayed",data-ot="", data-ot-ajax="yes", data-ot-show-on="click", data-ot-target="yes", data-ot-hide-trigger="closeButton") AJAX
+      a(href="/ajax-test-delayed",data-ot="", data-ot-ajax="yes", data-ot-show-on="click", data-ot-hide-on="click") AJAX
