Implemented the ensure viewport containment function.

--- a/test/views/playground.jade
+++ b/test/views/playground.jade
@@ -89,7 +89,7 @@ body
 
   #main
 
-    .test.opentip-test(data-ot="test") Hello
+    .test.opentip-test(data-ot="test",data-ot-hide-on="click",data-ot-tip-joint="bottom left") Hello
     .test.opentip-test2(data-ot="test", data-ot-hide-trigger="closeButton", data-ot-target="true", data-ot-tip-joint="top") Hello
 
     .test
