--- a/css/stylus/opentip.styl
+++ b/css/stylus/opentip.styl
@@ -16,9 +16,13 @@
     position relative
     font-size 13px
     line-height 120%
-    padding 3px
+    padding 9px 14px
     color rgba(0, 0, 0, 0.7)
     text-shadow -1px -1px 0px rgba(255, 255, 255, 0.2)
+
+    header
+      margin 0
+      padding 0
 
     .close
       position: absolute;
